<resources>
    <string name="app_name">自主学习</string>

    <string name="clear">清空</string>
    <string name="classify">分类</string>
    <string name="set_current">设置当前学段</string>
    <string name="xiaoxue">小学</string>
    <string name="chuzhong">初中</string>
    <string name="ql_loading">加载中</string>
    <string name="search_hint">输入想学的课程</string>
    <string name="recommend">推荐</string>
    <string name="popular_course">最受欢迎课程</string>
    <string name="play_count">播放量</string>
    <string name="start_learn">开始学习</string>
    <string name="free_course">免费课程</string>
    <string name="look_more">查看更多</string>
    <string name="recommend_course">推荐课程</string>
    <string name="change">换一批</string>
    <string name="delete_error_msg">删除失败</string>
    <string name="about_course">相关课程</string>
    <string name="all">全部</string>
    <string name="learn_driation">学习时长</string>
    <string name="mine_error">我的错题</string>
    <string name="self_message">个人信息</string>
    <string name="setting">设置</string>
    <string name="my_note">我的笔记</string>
    <string name="learn_record">学习记录</string>
    <string name="download">下载管理</string>
    <string name="go_to_login">去登录</string>
    <string name="login_tips">目前为游客身份无法体验此功能，登录后体验更多功能</string>
    <!--登录页面-->
    <string name="you_are_not_login">您还未登录</string>
    <string name="password_loading">密码登录</string>
    <string name="please_enter_codeNumber">请输入登录号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="change_school">切换学校</string>
    <string name="lose_passwroding">忘记密码</string>
    <string name="school_name">请先选择学校</string>
    <string name="guest_login">先随便看看></string>
    <string name="shaixuan">筛选</string>
    <string name="lose_password_tips">如果您忘记密码，请联系学校管理员重置。</string>
    <string name="contact_administrator">联系管理员</string>
    <string name="administrator_number">19283029292</string>
    <string name="lose_password_hint">账号初始密码为12345,可在我的-设置中修改。</string>
    <string name="i_know">我知道了</string>
    <string name="please_enter_school_name">输入学校名称</string>
    <string name="choose_school">选择学校</string>
    <string name="login_num">登录号</string>
    <string name="change_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="not_find_school">没有找到学校?</string>
    <string name="only_school_user_login">只有合作学校可以学校账户登录哦</string>
    <string name="input_origin_password">输入原密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_new_password_again">再次输入新密码</string>
    <string name="back">返回</string>
    <string name="head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="learn_stage">学习阶段</string>
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="today_learn">今日上课</string>
    <string name="total_learn">累计上课</string>
    <string name="class_rank">今日班级排名</string>
    <string name="self_class_learn_time_rank">本班学习时长排行</string>
    <string name="grade_learn_time_rank">班级学习时长TOP10</string>
    <string name="learn_driation_tip">还没有学习时长统计</string>
    <string name="manage">管理</string>
    <string name="choose_all">全部选择</string>
    <string name="delete">删除</string>
    <string name="has_not_note">没有笔记</string>
    <string name="note_tip">还没有笔记</string>
    <string name="minute">分钟</string>
    <string name="record_tip">暂无学习记录</string>
    <string name="my_answer">我的答案:</string>
    <string name="right_answer">正确答案</string>
    <string name="close">收起</string>
    <string name="error_problem_tip">没有错题</string>
    <string name="course_detail">课程详情</string>
    <string name="teacher_introduce">教师介绍</string>
    <string name="course_introduce">课程简介</string>
    <string name="course_outline">课程大纲</string>
    <string name="start">开始</string>
    <string name="download_tip">还没有下载记录</string>
    <string name="center">个人中心</string>
    <string name="user">用户名</string>
    <string name="free">免费</string>
    <string name="filter">筛选</string>

    <string name="confirm">确认</string>
    <string name="reset">重置</string>

    <string name="btn_guide_login">开始学习</string>
</resources>
