<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    android:orientation="vertical"
    tools:context="com.wxjz.tenms_pad.activity.MineActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_85"
        android:background="@drawable/top_bac">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_20"
            android:paddingRight="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_20"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="@dimen/dp_5">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_head"

                android:layout_width="@dimen/dp_53"
                android:layout_height="@dimen/dp_53"
                android:layout_centerHorizontal="true"
                android:background="@drawable/default_head" />

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_toRightOf="@id/iv_head"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_xue_duan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nick_name"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@id/iv_head"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/sp_8" />

            <TextView
                android:paddingRight="@dimen/dp_20"
                android:visibility="visible"
                android:id="@+id/tv_xue_jifen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nick_name"
                android:paddingLeft="@dimen/dp_10"
                android:layout_toRightOf="@id/iv_head"
                android:text="积分"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_8" />



        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="@dimen/dp_121"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/normal_item_bac"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_download"
                style="@style/radio_button_style"
                android:drawableLeft="@drawable/offline_view"
                android:text="@string/download" />

            <RadioButton
                android:id="@+id/rb_learn_record"
                style="@style/radio_button_style"
                android:drawableLeft="@drawable/watch_record"
                android:text="@string/learn_record" />

            <RadioButton
                android:id="@+id/rb_my_note"
                style="@style/radio_button_style"
                android:drawableLeft="@drawable/my_note"
                android:paddingLeft="-5dp"
                android:text="@string/my_note" />

            <RadioButton
                android:id="@+id/rb_error_problem"
                style="@style/radio_button_style"
                android:drawableLeft="@drawable/error_problem"
                android:text="@string/mine_error" />

            <RadioButton
                android:id="@+id/rb_learn_duration"
                style="@style/radio_button_style"
                android:drawableLeft="@drawable/learn_duration"
                android:text="@string/learn_driation" />

            <RadioButton
                android:id="@+id/rb_self_message"
                style="@style/radio_button_style"
                android:drawableLeft="@drawable/mine_fill"
                android:text="@string/self_message" />

            <RadioButton
                android:id="@+id/rb_setting"
                style="@style/radio_button_style"
                android:checked="true"
                android:drawableLeft="@drawable/setting1"
                android:text="@string/setting" />

        </RadioGroup>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_8">

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
