<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/dp_7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_item_bac"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_27">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_6"
                android:text="@string/login_num"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_7" />

            <TextView
                android:id="@+id/tv_login_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_6"
                android:text=""
                android:textColor="#888888"
                android:textSize="@dimen/sp_7" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:background="#F2F2F2" />

        <RelativeLayout
            android:background="@drawable/normal_item_click_selector"
            android:id="@+id/rl_change_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_27">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_6"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_7" />

            <ImageView
                android:id="@+id/iv_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_6"
                android:src="@drawable/more" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/normal_item_bac"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_clear_cache"
            android:background="@drawable/normal_item_click_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_27">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_6"
                android:text="@string/clear_cache"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_7" />

            <TextView
                android:id="@+id/tv_clear_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_6"
                android:drawablePadding="@dimen/dp_6"
                android:drawableRight="@drawable/more"
                android:textColor="#888888"
                android:textSize="@dimen/sp_7" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:background="#F2F2F2" />

        <RelativeLayout
            android:background="@drawable/normal_item_click_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_27">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_6"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_7" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_exit_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/exit_button_selector"
        android:text="退出登录"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_7" />
</LinearLayout>